Fix IE bug where it was not possible to scroll in messages-list on IE

--- a/src/resources/sass/components/messages/_messages-list.scss
+++ b/src/resources/sass/components/messages/_messages-list.scss
@@ -8,7 +8,7 @@
 	color: $color-base-complement;
 
 	@include min-screen($screen-md-min) {
-		flex: 1 0 0 !important;
+		flex: 1 0 0;
 	}
 }
 
